<resources>
    <string name="app_name">Sita Ram Thing</string>
    <string name="Hobbies">Hobbies</string>
    <string name="Skill">Skill</string>
    <string name="Contact">Contact</string>
    <string name="Profils">Profils</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Description">Description</string>
    <string name="Email">Email</string>
    <string name="enter_the_contact_details">enter_the_contact_details</string>
    <string name="Back">Back</string>
    <string name="Name">Name</string>
    <string name="i_am_a_student_at_islington_college_when_i_was_a_further_studying_in_bit_2_gratitude_the_xavier_int_college_and_see_completed_from_terse_secondary_school" />
    <string name="Nepal" />
    <string name="country">Country</string>
    <string name="text_977_32629054" />
    <string name="Phone_no">Phone</string>
    <string name="Male">Male</string>
    <string name="Gender">Gender</string>
    <string name="Thing">Thing</string>
    <string name="Last_Name">Last_Name</string>
    <string name="Sita_Ram">Sita Ram</string>
    <string name="First_Name">First_Name</string>
    <string name="Bio_Data">Bio_Data</string>
    <string name="Address_Sindhupalchowk" />
    <string name="dob_18_february_2002" />
    <string name="name_sita_ram_thing" />
    <string name="sita_ram_thing">Sita Ram Thing</string>
    <string name="age">AGE</string>
    <string name="city">CITY</string>
    <string name="height">HEIGHT</string>
    <string name="_42">42</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="_5_9">5.9</string>
    <string name="i_am_sita_ram_thing_from_sindhupalchowk_and_i_m_a_student_of_islington_college_i_am_born_in_nepal_in_sindhupalchowk_district_Melamchi_Minicipality_currently_bachelor_second_years">I am Sita Ram Thing from Sindhupalchowk and I\'m a student of Islington college. I am born in Nepal in Sindhupalchowk district, Melamchi minicipality. Currently bachelor second years.</string>
    <string name="_9732629054">9732629054</string>
    <string name="county">County</string>
    <string name="islington_college">Islington College</string>
    <string name="college">College</string>
    <string name="nepal">Nepal</string>
    <string name="first_name">First Name</string>
    <string name="_20">20</string>
    <string name="Last_name">Last Name</string>
    <string name="hobbies">Hobbies</string>
    <string name="back">Back</string>
    <string name="playing_sports_football_volleyball_tennis_etc">Playing sports (Football, Volleyball, Tennis etc)</string>
    <string name="reading_and_writing_book_reading_and_writing_news_paper_reading">Reading and Writing (Book reading and writing, News paper reading)</string>
    <string name="enjoy_the_party_functions_events_party_etc">Enjoy the party (Functions, Events, Party etc)</string>
    <string name="language_learning_english_hindi_korean_etc">Language learning (English, Hindi, Korean etc)</string>
    <string name="music_singing_movies_listen_to_music_etc">Music (Singing, movies, listen to music etc)</string>
    <string name="photography_take_photo_for_natural_thing_bird_animals_etc">Photography (Take photo for Natural thing, Bird, animals etc)</string>
    <string name="Football">Football</string>
    <string name="designing">Designing</string>
    <string name="typing">Typing</string>
    <string name="reading">Reading</string>
    <string name="volleyball">VolleyBall</string>
    <string name="music">Music</string>
    <string name="swimming">Swimming</string>
    <string name="movies">Movies</string>
    <string name="hill_climb">Hill Climb</string>
    <string name="profile">Profile</string>
    <string name="in_the_current_years_i_can_learn_by_programming_on_bit_i_m_not_complete_in_my_bachelor_s_but_running_the_second_year_i_will_daily_study_and_self_learning_or_research_educational_knowledge">* In the current years, I can learn by programming on BIT. I\'m not complete in my bachelor’s but running the second year. I will daily study and self-learning or research educational knowledge.</string>
    <string name="further_study_at_islington_college_for_bachelor_second_years">- Further study at Islington College for bachelor second years.</string>
    <string name="slc_grade_3_22_gpa_on_graduate_form_xavier_international_college_2018">- SLC grade 3.22 GPA on graduate form Xavier International College 2018</string>
    <string name="see_grade_3_25_gpa_on_graduate_form_terse_secondary_school_2018">- SEE grade 3.25 GPA on graduate form Terse Secondary School 2018</string>
    <string name="education_qualification">Education Qualification</string>
    <string name="np01ma422003_gmail_com">np01ma422003@gmail.com</string>
    <string name="_20_years">20 Years</string>
    <string name="ages">Ages</string>
    <string name="gender">Gender</string>
    <string name="send">Send</string>
    <string name="call_us_or_send_a_message_and_we_ll_respond_as_soon_as_possible">Call us or send a message and we\'ll respond as soon as possible.</string>
    <string name="contact_us">Contact us</string>
    <string name="soft_skills">Soft Skills</string>
    <string name="programming_skills">Programming Skills</string>
    <string name="title_activity_main">MainActivity</string>
    Strings used for fragments for navigation
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="welcome_this_is_only_for_students_who_are_searching_me">Welcome !! This is only for students who are searching me.</string>
    <string name="this_is_the_educational_app_this_app_is_the_first_time_launched_by_sitaram_with_his_self_study_and_research_the_new_things">This is the educational app. This app is the first time launched by Sitaram with his self-study and research the new things.</string>
    <string name="this_is_the_new_educational_app_in_this_app_is_first_time_launched_with_his_self_study_and_research_the_new_things">This is the new educational app. In this app is first time launched with his self-study and research the new things.</string>
    <string name="communication_skills">Communication skill</string>
    <string name="time_management_skills">Time Management skill</string>
    <string name="problem_solving_skills">Problem Solving skill</string>
    <string name="marketing_skill">Marketing skill</string>
    <string name="team_skills">Teamwork skill</string>
    <string name="interpersonal_skills">Interpersonal skill</string>
    <string name="leadership_skill">Leadership skill</string>
    <string name="database_and_sql">Databases and SQL Skill</string>
    <string name="android_app_development_skills">Android App Development Skill</string>
    <string name="git_version_control_skills">Github Version Control Skill</string>
    <string name="html_css_javascript">HTML CSS JavaScript Skill</string>
    <string name="java_programming">Java Programming Skill</string>
    <string name="python_programming">Python Programming Skill</string>
    <string name="soft_skill">Soft Skill</string>
    <string name="the_workplace_soft_skills_are_considered_to_be_a_complement_to_hard_skills_which_refer_to_a_person_s_knowledge_and_occupational_skills">The workplace, soft skills are considered to be a complement to hard skills, which refer to a person\'s knowledge and occupational skills.</string>
    <string name="programming_is_a_set_of_procedures_and_sets_of_instructions_that_lead_computers_to_perform_specific_tasks_programming_comprises_features_called_programming_framework_variables_data_types_keywords_loops_and_much_more">Programming is a set of procedures and sets of instructions that lead computers to perform specific tasks. Programming comprises features called Programming framework, Variables, Data Types, Keywords, loops, and much more.</string>
    <string name="following">Following</string>
    <string name="_1_814">1,814</string>
    <string name="followers">Followers</string>
    <string name="_2_926">2,926</string>
    <string name="view_profile">View Profile</string>
    <string name="duwachour_melamchi">Duwachour, Melamchi</string>
    <string name="todo">TODO</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="welcome_to_my_portfolio_app">Welcome to my portfolio app.</string>
    <string name="logout">Logout</string>
    <string name="helps_and_support">Helps and Support</string>
    <string name="setting_and_privacy">Setting and Privacy</string>
    <string name="menus">Menus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_sitaram_thing_currently_pursuing_bachelor_in_mobile_application_development_i_am_learning_android_mobile_application_development">I am Sitaram Thing. Currently pursuing bachelor in Mobile application development. I am learning android mobile application development.</string>
    <string name="start">Start</string>
    <string name="tracking">Tracking</string>
</resources>