<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@null"
                android:src="@mipmap/img_profile"
                tools:ignore="ImageContrastCheck">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="12dp"
                        android:backgroundTint="#E1DFDF"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="120dp"
                                android:layout_height="20dp"
                                android:text="@string/age"
                                android:textAlignment="center"
                                android:textSize="10sp"
                                tools:ignore="RtlSymmetry,SmallSp" />

                            <TextView
                                android:layout_width="120dp"
                                android:layout_height="20dp"
                                android:text="@string/city"
                                android:textAlignment="center"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:text="@string/height"
                                android:textAlignment="center"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="120dp"
                                android:layout_height="30dp"
                                android:text="@string/_20"
                                android:textAlignment="center"
                                android:textSize="15sp"
                                tools:ignore="RtlSymmetry" />

                            <TextView
                                android:layout_width="120dp"
                                android:layout_height="30dp"
                                android:text="@string/kathmandu"
                                android:textAlignment="center"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:text="@string/_5_9"
                                android:textAlignment="center"
                                android:textSize="15sp" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="370dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="5dp"
                        android:justificationMode="inter_word"
                        android:paddingLeft="10sp"
                        android:paddingRight="10sp"
                        android:text ="@string/i_am_sitaram_thing_currently_pursuing_bachelor_in_mobile_application_development_i_am_learning_android_mobile_application_development"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        tools:targetApi="o" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="12dp"
                        android:backgroundTint="#F3EFEF"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/first_name"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/Sita_Ram"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/Last_name"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/Thing"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/Gender"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/Male"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/Phone_no"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/_9732629054"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/country"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:paddingStart="20sp"
                                    android:text="@string/nepal"
                                    android:textSize="15sp"
                                    tools:ignore="RtlSymmetry" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>


