<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ContactFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/img_contact"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#4B888888"
                android:background="@drawable/shape"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/tvSearch"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:background="@drawable/custom_view"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:ems="10"
                        android:hint="@string/Search"
                        android:inputType="textImeMultiLine"
                        android:paddingEnd="10dp"
                        android:paddingStart="15sp"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                    <EditText
                        android:id="@+id/tvPhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:background="@drawable/custom_view"
                        android:drawableStart="@drawable/ic_baseline_phone_call"
                        android:ems="10"
                        android:hint="@string/Phone_no"
                        android:inputType="phone"
                        android:paddingEnd="10dp"
                        android:paddingStart="15sp"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_marginStart="15dp"
                        android:padding="30dp"
                        android:backgroundTint="@color/white"
                        app:drawableLeftCompat="@drawable/ic_baseline_search_24"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="50dp" />

                    <Button
                        android:id="@+id/btnContact"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="15dp"
                        android:padding="30dp"
                        android:layout_weight="1"
                        android:backgroundTint="#FAF8F8"
                        app:drawableLeftCompat="@drawable/ic_baseline_phone_call"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/contact_us"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/call_us_or_send_a_message_and_we_ll_respond_as_soon_as_possible"
                        android:textColor="#F7303030" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginBottom="30dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/tvEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:drawableEnd="@drawable/ic_baseline_email_24"
                        android:ems="10"
                        android:hint="@string/to"
                        android:inputType="textEmailAddress"
                        android:paddingStart="20sp"
                        android:paddingEnd="10dp"
                        android:background="@drawable/custom_view"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                    <EditText
                        android:id="@+id/tvSubject"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                        android:ems="10"
                        android:hint="@string/subject"
                        android:inputType="textEmailSubject"
                        android:paddingStart="20sp"
                        android:paddingEnd="10dp"
                        android:background="@drawable/custom_view"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                    <EditText
                        android:id="@+id/tvDescriptions"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:drawableEnd="@drawable/ic_baseline_near_message_24"
                        android:ems="10"
                        android:hint="@string/Description"
                        android:inputType="textMultiLine"
                        android:paddingStart="20sp"
                        android:paddingEnd="10dp"
                        android:background="@drawable/custom_view"
                        tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="180dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20sp"
                        android:backgroundTint="#03B0FF"
                        android:text="@string/send"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>